# webrtc-java-slim

./: CLAUDE.md  NOTICE  README.md  build.gradle.kts
.github/: dependabot.yml
.github/actions/prepare-linux/: action.yml
.github/workflows/: build.yml
gradle/: libs.versions.toml
webrtc/: build.gradle.kts
webrtc-jni/: build.gradle.kts  gradle.properties
webrtc-jni/src/main/cpp/: CMakeLists.txt
webrtc-jni/src/main/cpp/dependencies/webrtc/: CMakeLists.txt
webrtc-jni/src/main/cpp/dependencies/webrtc/patches/macos/: disable_desktop_capture.patch  use_system_ssl_root_certs.patch
webrtc-jni/src/main/cpp/dependencies/webrtc/patches/windows/: use_system_ssl_root_certs.patch
webrtc-jni/src/main/cpp/include/: JNI_RTCDataChannel.h
webrtc-jni/src/main/cpp/include/api/: DataBufferFactory.h  PeerConnectionObserver.h  RTCIceCandidate.h
webrtc-jni/src/main/cpp/src/: JNI_PeerConnectionFactory.cpp  JNI_RTCDataChannel.cpp  JNI_RTCPeerConnection.cpp
webrtc-jni/src/main/cpp/src/api/: DataBufferFactory.cpp  PeerConnectionObserver.cpp  RTCDataChannelObserver.cpp  RTCIceCandidate.cpp  RTCStats.cpp
webrtc/src/main/java/dev/kastle/webrtc/: PeerConnectionObserver.java  RTCDataChannel.java  RTCDataChannelBuffer.java
webrtc/src/test/java/dev/kastle/webrtc/: RTCPeerConnectionTests.java  TestPeerConnection.java
